# sigproc

./: .gitignore  Makefile.am  README  accn.csh  add_samples.c  ahunt.csh  aliases.c  aoftm.c  bacspin.h  bandfactors.c  bandpass.c  barycentre.c  best.f  blanker.c  bootstrap  bpp2fb.c  cfits_subs.c  chan_freqs.c  chaninfo.f  clock.f  close_log.c  config.h.in  configure  configure.ac  configure.in  conv.c  cpgplot.h  csamp.inc  csearch.csh  decimate_data.c  decimate_header.c  dedisperse.c  dedisperse.h  dedisperse_data.c  dedisperse_data.c.bak  dedisperse_header.c  depolyco.c  dialog.h  dice.c  differ.csh  (+146 more)
autoconf/: fftw.m4  package.m4  pgplot.m4  psrxml.m4  x11.m4
autoconf.boot/: cfitsio.m4  crypto.m4  debug.m4  etr_socket_nsl.m4  psrxml.m4  tempo2.m4
src/: Creadspec.C  Makefile.am  TKfit.C  TKfit.h  add_channels.c  add_samples.c  alfa_position.c  aliases.c  angle_split.c  aoftm.c  bandfactors.c  bandpass.c  barycentre.c  baseline.f  best.f  birdies.inc  bit.c  blanker.c  bpp.c  bpp2fb.c  bpphdr.h  cel2gal.c  cfits_subs.c  chan_freqs.c  chop_fil.c  clip.c  close_log.c  conv.c  convertSigM.c  cpower.f  cprofc.c  decimate.c  decimate.h  decimate_data.c  decimate_header.c  dedisperse.c  dedisperse.h  dedisperse_all.C  dedisperse_all.h  dedisperse_data.c  (+219 more)
src/sigproc/: filfile.hpp  filterbankblock.hpp  outputfilfile.hpp
